[package]
edition = "2024"
name = "libprefix"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
prefix = { path = "../lib/prefix" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

wasm-bindgen = {version="0.2"}

# js-sys = {version="0.3"}

# [dependencies.web-sys]
# version = "0.3"
# features = [
#   "ImageData",
#   "CanvasRenderingContext2d",
#   "console",
# ]
