[package]
edition = "2024"
name = "libentropy"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
compress = { git = "https://github.com/neri/compress.git", rev = "fbf52c474557f641418acdf17a3234500b517de6" }
# compress = { path = "../../compress" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

wasm-bindgen = {version="0.2"}

# js-sys = {version="0.3"}

# [dependencies.web-sys]
# version = "0.3"
# features = [
#   "ImageData",
#   "CanvasRenderingContext2d",
#   "console",
# ]
